# File_sorting_script

./: .gitignore  LICENSE  README.md  README_update_after_release.txt  build_app.sh  build_cross_platform.sh  build_manual.sh  cross_platform_build_guide.sh  gui.py  main.py  prepare_release.sh  pyproject.toml  run_gui.py
.github/workflows/: build-old.yml.backup  build.yml
