[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-sorter"
version = "1.0.0"
description = "A modern file sorting application with GUI interface"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dependencies = [
    "customtkinter>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=5.0",
    "pytest>=7.0",
]

[project.scripts]
file-sorter = "main:main"
file-sorter-gui = "gui:main"

[project.urls]
Homepage = "https://github.com/yourusername/file-sorter"
Issues = "https://github.com/yourusername/file-sorter/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]
